--- a/algo/techniques/dsu/1. small_to_large.md
+++ b/algo/techniques/dsu/1. small_to_large.md
@@ -2,3 +2,7 @@ SMALL TO LARGE METHOD:
 ---
 The small to large method used in dsu can be used independently which reduces the complexity to nlogn because combining elements of small grp to a larger grp which has size atleast 
 double greater than its previous small grp ensures that elements will change grps atmost logn times thereby obtaining a good complexity
+
+
+PROBLEM LINKS:
+[CODEFORCES EDU 119 DIV2 E](https://codeforces.com/contest/1620/problem/E)
