Update x1+x2+....+xn = d.md

--- a/algo/dp/techniques/x1+x2+....+xn = d.md
+++ b/algo/dp/techniques/x1+x2+....+xn = d.md
@@ -18,6 +18,8 @@ since there is a upperbound on cnt of odd numbers \
 we need to keep track of how many numbers of what element we picked as well\
 therefore to avoid this we can simply exhaust all count of an odd element at once\
 dp[0]=1 base case\
+for cnti 1 to cnti:\
+for len cnti to upperbound:\
 if len-cnti>=0:\
 dp[len]+=dp[len-cnti]%mod
 
